--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>shoe marketing platform</title>
+  
 </head>
 
 <body>
@@ -23,7 +24,7 @@
 
             <li>
               <form>
-                <input type="Email adress" placeholder="Enter your email adress" class="button-large" />
+                <input type="Email adress" placeholder="Enter your email adress" class="button-large" required />
                 <input type="Submit" value="Log in" class="button-huge" />
               </form>
             </li>
@@ -75,27 +76,38 @@
     </div>
 
 
-    <section class="coverage">
-      <div class="coverage-left">
-        <h1 class="increase">You can find our shoe selling companues in most part of the world</h1>
-        <p class="size">In africa you can find us in :</p>
-        <ul>
-          <div class="capitalize">
-            <li>Kenya</li>
-            <li>Uganda</li>
-            <li>South Africa</li>
-            <li>Egypt</li>
-            <li>USA</li>
-            <li>Italy</li>
-            <li>England</li>
-            <li>Japan</li>
-            <li>China</li>
-        </ul>
+    <section class="companies">
+      
+        
+      <h2>These are major companies </h2>  
+
+      <div class="brand-logos">
+        <img src="Images/logos/svg/adidas.svg" width=200>
+        <img src="Images/logos/svg/nike.svg" width=200>
+        <img src="Images/logos/svg/fila.svg" width=200>
+        <img src="Images/logos/svg/puma.svg" width=200>
       </div>
+      <section class="testimonials">
+      <iframe width="700" height="700" src="https://www.youtube.com/embed/EbZg9hPb9Wc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen width=700px></iframe>  
+      <div class="testimonials-text"> 
+      <p class="large">I have given an example of one major shoe company that started from scratch and now they are most producing company in the world.ethey have sponsered sports lik </p>
+      <ul>
+        <li>Football</li>
+        <li>Basketball</li>
+        <li>Volleyball</li>
+        <li>Athletics</li>
+        <li>long Tennis</li>
+      </ul>
+      <div>
+      <p>For more information <a href="#">register here</a ></p>
+        <div class="contrast">
+          <form>
+      <input type="email"  placeholder="Enter Email adress" required>
+      <input type="submit" value="Subscribe ">
+        </div>
+      </form>
       </div>
-      <div class="coverage-right">
-        <img src="videos/earth.gif" width="500">
-      </div>
+    </div>
     </section>
 
 
@@ -103,10 +115,12 @@
   <footer style="clear: both;">
     <div>
       <ul>
+        <hr>
         <li><i class="fab fa-facebook"></i></li>
         <li><i class="fab fa-twitter"></i></li>
         <li><i class="fab fa-youtube"></i></li>
         <li><i class="fab fa-instagram"></i></li>
+        <hr>
       </ul>
     </div>
   </footer>
